# ChangeLog for media-video/guvcview
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/guvcview/ChangeLog,v 1.39 2013/07/23 05:33:18 radhermit Exp $

*guvcview-1.7.1 (23 Jul 2013)

  23 Jul 2013; Tim Harder <radhermit@gentoo.org> +guvcview-1.7.1.ebuild:
  Version bump.

  23 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> guvcview-1.6.1.ebuild:
  Set !<sys-kernel/linux-headers-3.4-r2 in attempt to ensure linux/uvcvideo.h
  is always installed #448260

  23 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> guvcview-1.6.1.ebuild:
  Pull in virtual/os-headers for #include <linux/foo.h> type of code

  11 Dec 2012; Ian Stakenvicius <axs@gentoo.org> guvcview-1.6.1.ebuild:
  virtualize the udev dependency

  19 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -guvcview-1.5.1.ebuild,
  -guvcview-1.5.3.ebuild, -files/guvcview-1.5.3-header.patch,
  -guvcview-1.6.0.ebuild:
  old

  19 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> guvcview-1.6.1.ebuild:
  amd64/x86 stable

*guvcview-1.6.1 (24 Aug 2012)

  24 Aug 2012; Samuli Suominen <ssuominen@gentoo.org> +guvcview-1.6.1.ebuild:
  Version bump.

*guvcview-1.5.1 (02 Aug 2012)

  02 Aug 2012; Patrick Lauer <patrick@gentoo.org> +guvcview-1.5.1.ebuild:
  Restore last non-gtk3 version

*guvcview-1.6.0 (15 Jul 2012)

  15 Jul 2012; Julian Ospald <hasufell@gentoo.org> +guvcview-1.6.0.ebuild:
  version bump wrt bug #426648

  16 May 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/guvcview-1.5.1-loops.patch, -guvcview-1.4.2.ebuild,
  -guvcview-1.5.0.ebuild, -guvcview-1.5.1.ebuild, guvcview-1.5.3.ebuild:
  Stabilise latest on amd64 and x86. Drop older.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> guvcview-1.4.2.ebuild,
  guvcview-1.5.0.ebuild, guvcview-1.5.1.ebuild, guvcview-1.5.3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  25 Mar 2012; Tim Harder <radhermit@gentoo.org> -guvcview-1.4.4.ebuild,