@@ -3,18 +3,20 @@ Hash: SHA256
 
 DIST guvcview-src-1.6.1.tar.gz 480184 SHA256 b11abb8e5778ebd47adb8486d7762b9494b033f4e8be5b523c16a96a8fc80acb SHA512 dee99d6240dd963353d1519b3f40f5bf19f20cf5013b9d51c45cfae9166f2b1b21e816cbcc0a8a8e441e778edbd1544eca794cda51242b0c1ef52862de6b8acd WHIRLPOOL 30fc07389cbb1661220a863b645be4760fd0138de62443eb123ffb9f79b58b186f5e7c595cb4b0f07accdb512da3706b8e987bb3144ae059f8dc975710a84545
 DIST guvcview-src-1.7.1.tar.gz 464478 SHA256 1809f784210b295c0ba35297977e3416d6ff2545d0b467138d1beff18e731e53 SHA512 af590250a035e0d95005e4b88b2ae3eaba1c427ff857361afbbfa58a3ec5537f67cada31b8d72802384af2a39691c9fb2185d2f8ce5c3d3068d1fa4fc23882fe WHIRLPOOL 1ea05bb8ce3a8923f4e46bbbc76af2c6dedfffcfa6bcf6787ffdead7d1253a36475cf18344c145c948178592cd1caa3aa3e741439f747aadb79cf8d9a3172ebb
+DIST guvcview-src-1.7.2.tar.gz 508179 SHA256 4bedf9ce57edf60e761e7de9563a39a3ae43e4076cf9b3b8887218ec63754696 SHA512 e8bd3d9fe465486971d1d94bc73a31eb704194ce21c1482fd0d13c2cd6e256828bd99b20f5a3d7e97eb8b80c2faa5cacd4394f979c87b84b5b184d84670d8f77 WHIRLPOOL 4a5bef8dd92a8435290fec34dd8fea80f77ea1fe15e13d6e33a45f01482fd6dbce68a1ef374a8558ecb07c974c21f582c02bc5f16aff1a92efb5747e9adb0293
 EBUILD guvcview-1.6.1.ebuild 1025 SHA256 105947345230e67f040525e18cd52cc8fd21110cda23aa5905716fe2d2658c0b SHA512 6f972e1522afebea11a72ff68eb1cc7df25d0a16e9df774d25fb3c96331ea8746015ab155f7be1e9374fd033deb9e91e6ee913315d90f2e8f89ad5c1ff777c9c WHIRLPOOL f205060cee7235924db1db9703ea1f16c66700dec6a76dcccd41e305a5bc490d8c898b259af155fd5ebf92e4a208ae305a06086b0bd88bcf8eee18ecec31a726
 EBUILD guvcview-1.7.1.ebuild 1025 SHA256 8f27811ab78cf97eb4f9afe2936b8ea669839788585589cf0c74a6ef706c1ac0 SHA512 3b2557d03e8802ec26ad16975c2ebd0f68d9cb21f04e9baeb6ddbb035d8105040157a119adc80218c5a655b51fd825fd9f623b013873d6d1cad7f3951547d9a7 WHIRLPOOL ae8f1cefdb67a5fcb8b815d5c03c0a2c78fc6447a84d54c94cfac2d4a3f854d56d10a0a94949641926d76762ab47b3bcf9b8bced1bea504926052f7875df8386
-MISC ChangeLog 5980 SHA256 5b9dff85a9bd556a23b35eae3442a842b8ea5bf1086697f345c790cd9a4b2e54 SHA512 d3c3e712249dda39b6411577cd9e50dc6ad51437e01cad5e70f8fb8e3fe17cb0038ea6f973f7dcf6d1b8f515b20360fa080599678541727790109674a6ece9b6 WHIRLPOOL 9c6baef03e7a7ca96a81e3abdec7d64a439ea22c93f0870a8be23f466663118b212f451f8140c8f6256c038ea6f66f9475174f9c8665329c1640aabba7ece18b
+EBUILD guvcview-1.7.2.ebuild 1043 SHA256 d9aa7c3366de46eda426dd2b0c55dee24310c52004533aba75e53ddd093e281d SHA512 ab41e58eed0edce4d57c3e0d2011dabfce275b6a46b4338d73a33fb97d1292f8be1c79d30e589050fdc4ea20f43fe84eedfa22205c4530588f83c9ae1c70af8a WHIRLPOOL 930a3eb13d4d2dcf0b4704b4d3571b7aeb06913fd5c11fd125d72c2fce2fcc7000e682e4cfb20de83e7bb65cba16e4ae257e981afc3171068c65aad14cc7f3b8
+MISC ChangeLog 6101 SHA256 1d0c105db3580db15d0f321940e01ebf0e758f8597464220d52b579289fa1fa5 SHA512 89221c33834778bb8450c60a14cd3df9e2678d5d7cb8e1bfc619343661e30a78dda85fd148e9f533f57c1f2ff4c64a490135dda130711fa7d1dd653aa66a8919 WHIRLPOOL 56778fa2d03b9f828c7f42ed67b3803e1ceb31aaefaef235728f015fc5fb5dc020545992c1c72727b7c26a9a5c7bed4cf9c16b68f17f63528fb32d9453afe78a
 MISC metadata.xml 228 SHA256 060670a1a67923937e4bf55598ae59368d5e716b0b618dedaf12b15f45e8e234 SHA512 72961436fc75b89ae191774325166a8cf99d82613f707985e315bc6332a1ce0ebcdf578e1308b7baf85d3ca8c9f13ffeed1c6f92333878ef93828591727f5f97 WHIRLPOOL cfce0893692d72e8678d7248b220b9de80b8a4c1e14ed211f404a2b3a703fd9df155d16e987591fa5aa8ecb067a0c259c111ac09b00eea8aa654813541401033
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR7hWfAAoJEEqz6FtPBkyjf8gIAKrsLdE2UWszl9gcXVQSLp8c
-tv0cTViTMeCB3m7K7QjiAmTEs++lmqcnrohfgbewVE6YriCZl1n09HQ64vuS8Z68
-DehsOHYNzzLWRreRWtVnoSCyyfb67pBN/qWO3EqlNgm2LiT7eB+eCiO9u9xrtOpO
-2VzuKQ494Yl7EV3o0eW2wR+3gMoviE7EezRaFTUu6KW3SyP2pOspNU7tlswQw1Qp
-V8q1wp33CLbKWJhd/C91uMGpX3aaIxtMisOiYYOVpc/pEJkrXidJuq7/eQUYIVFR
-Tq2pylH7CsrO1M5qgSHr4XNHHHQ/a6uBvywc/jrUUDz3NNBNZVuyZx4fizo130o=
-=pHAH
+iQEcBAEBCAAGBQJSqqvpAAoJEEqz6FtPBkyjWjMIAJeA4QKOCFRvCf+HGtGw5PKW
+VJ3Z9jC57OTsV997MS/r7e/tUnWFYpgl0uhN/4U8ExfDAFut7ccsE7w1RCs5DymE
+YZp/H3F/DjxXdAxVzQ0dM6UqSkWffhCGoWJDlEGo8e9ocy/JnrtoWCFTJUrca/Zj
+JG0QABjHSncLU93ENMuRcFKUWP7li2ruwvexD18RqfHtVm3dhpeFtq6ZZ3uDK1LV
+Zb1vquth5LGA6yZNsIl//j1NN+mYKnGWvqIPp1hqAc1hHh6qa9sITrrGsZ8BANFm
+Z9XeBRLDRht1tSYRPFPyhkLqWfJULRI/AE/Zb8DRUeQ6JsAfYwk7Qd1g6arELho=
+=/m5x
 -----END PGP SIGNATURE-----
